<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hunt Paradise</string>
    <string name="menu_manager_activies">Management Activity Type</string>
    <string name="menu_schedule_tip">schedule reminder</string>
    <string name="menu_language">language switch</string>
    <string name="menu_soft_manager">software management</string>
    <string name="menu_font">font size</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="langguage_select">Choose a language</string>
    <string name="change_languag_notice">Language switching will take effect after reboot</string>
    <string name="reboot">reboot</string>
    <string name="cancle">Cancel</string>
    <string name="soft_manager">software management</string>
    <string name="uninstall">uninstall</string>
    <string name="soft_version">Version: %s</string>
    <string name="uninstall_app_tip">Uninstall this app?</string>
    <string name="uninstall_app">uninstall application</string>
    <string name="uninstall_now">uninstall now</string>
    <string name="uninstall_tip">Please select the app you want to uninstall!</string>
    <string name="empty_software">No apps to uninstall</string>
    <string name="suggestion_fd">Feedback</string>

    <string name="tell_us_more">please tell us more</string>
    <string name="tell_us_more_hint">Provide more details to help us better understand and resolve the issue.</string>
    <string name="enter_an_email_hint">enter email</string>
    <string name="submit">submit</string>
    <string name="feed_back_content">Please enter the question you want to feedback!</string>
    <string name="feed_back_email">Please enter your email address!</string>
    <string name="feed_back_ok">feedback success</string>
    <string name="feed_back_fail">Submission Failed</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="delete_task">delete</string>
    <string name="task_not_title">Untitled</string>
    <string name="task_not_content">No specific content</string>
    <string name="current_empty_task">currently no schedule</string>

    <string name="checked_read_privacy">Please check and read the privacy agreement~</string>
    <string name="get_install_permission">Get installed app permissions</string>
    <string name="get_install_permission_desc">This permission is primarily used to gather data around your app about user usage or app performance. By obtaining the installation list permission, our application can view all the application list information installed on your device. You can manage these programs, uninstall unnecessary software, free up disk space, and ensure system stability and security.</string>

    <string name="install_permission_ok">agree</string>
    <string name="install_permission_refuse">disagree</string>

    <string name="start_app">start</string>
    <string name="setting_follower_system">Follower system</string>
    <string name="setting_language_english">English</string>


    <array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </array>

    <array name="week">
        <item>sunday</item>
        <item>on Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>friday</item>
        <item>Saturday</item>

    </array>
    <string-array name="lunar_first_of_month">
        <item>春节</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>冬月</item>
        <item>腊月</item>
    </string-array>

    <string-array name="tradition_festival">
        <item>除夕</item>
        <item>0101春节</item>
        <item>0115元宵</item>
        <item>0505端午</item>
        <item>0707七夕</item>
        <item>0815中秋</item>
        <item>0909重阳</item>
    </string-array>

    <string-array name="lunar_str">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>初四</item>
        <item>初五</item>
        <item>初六</item>
        <item>初七</item>
        <item>初八</item>
        <item>初九</item>
        <item>初十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>二十</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>三十</item>
    </string-array>

    <string-array name="solar_festival" tools:ignore="InconsistentArrays">
        <item>0101元旦</item>
        <item>0214情人节</item>
        <item>0308妇女节</item>
        <item>0312植树节</item>
        <item>0315消权日</item>
        <item>0401愚人节</item>
        <item>0422地球日</item>
        <item>0501劳动节</item>
        <item>0504青年节</item>
        <item>0601儿童节</item>
        <item>0701建党节</item>
        <item>0801建军节</item>
        <item>0910教师节</item>
        <item>1001国庆节</item>
        <item>1031万圣节</item>
        <item>1111光棍节</item>
        <item>1224平安夜</item>
        <item>1225圣诞节</item>
    </string-array>

    <string-array name="solar_term">
        <item>春分</item>
        <item>清明</item>
        <item>谷雨</item>
        <item>立夏</item>
        <item>小满</item>
        <item>芒种</item>
        <item>夏至</item>
        <item>小暑</item>
        <item>大暑</item>
        <item>立秋</item>
        <item>处暑</item>
        <item>白露</item>
        <item>秋分</item>
        <item>寒露</item>
        <item>霜降</item>
        <item>立冬</item>
        <item>小雪</item>
        <item>大雪</item>
        <item>冬至</item>
        <item>小寒</item>
        <item>大寒</item>
        <item>立春</item>
        <item>雨水</item>
        <item>惊蛰</item>
    </string-array>

    <string-array name="special_festivals">
        <item>母亲节</item>
        <item>父亲节</item>
        <item>感恩节</item>
    </string-array>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string-array name="week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="year_view_week_string_array">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="month_string_array">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <integer-array name="trunk_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </integer-array>

    <string-array name="trunk_string_array">
        <item>辛</item>
        <item>壬</item>
        <item>癸</item>
        <item>甲</item>
        <item>乙</item>
        <item>丙</item>
        <item>丁</item>
        <item>戊</item>
        <item>己</item>
        <item>庚</item>
    </string-array>

    <integer-array name="branch_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </integer-array>

    <string-array name="branch_string_array">
        <item>酉</item>
        <item>戌</item>
        <item>亥</item>
        <item>子</item>
        <item>丑</item>
        <item>寅</item>
        <item>卯</item>
        <item>辰</item>
        <item>巳</item>
        <item>午</item>
        <item>未</item>
        <item>申</item>

    </string-array>
</resources>