<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_radius_10dp_whithe">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_install_permission"
        android:layout_marginTop="25dp"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_premission_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="180dp"
            android:scrollbars="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:lineSpacingExtra="2dp"
            android:lineSpacingMultiplier="1.5"
            android:textColor="@color/color_333333"
            android:layout_marginTop="20dp"
            android:text="@string/get_install_permission_desc"/>

<!--    </androidx.core.widget.NestedScrollView>-->


    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_radius_50dp_splash"
        android:text="@string/install_permission_ok"/>

    <TextView
        android:id="@+id/tv_refuse"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColor="@color/color_999999"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/install_permission_refuse"/>



</androidx.appcompat.widget.LinearLayoutCompat>