<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@drawable/bg_radius_10dp_whithe"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/change_languag_notice"
        android:textColor="@color/color_666666"
        android:textSize="15sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_cancel" />


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/cancle"
        android:textColor="@color/color_666666"
        android:background="@drawable/shape_cancle_text_border"
        android:textSize="15sp"
        android:lines="1"
        android:ellipsize="end"
        android:gravity="center"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_confirm" />


    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/reboot"
        android:textColor="@color/color_333333"
        android:textSize="17sp"
        android:gravity="center"
        android:lines="1"
        android:ellipsize="end"
        android:background="@drawable/shape_comfirm_text_border"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>