<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_shape_top_bar"
        android:orientation="vertical">

        <View
            android:id="@+id/view_status"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aciv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_back_white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:background="@drawable/shape_rv_language_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/suggestion_fd"
            android:textColor="@color/color_3d3d3d"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/tell_us_more"
            android:textColor="@color/color_3d3d3d"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_radius_4dp_border"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_suggestion_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:gravity="start"
                android:hint="@string/tell_us_more_hint"
                android:lineSpacingExtra="4dp"
                android:maxLength="500"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="15sp" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_radius_4dp_border"
            android:hint="@string/enter_an_email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/color_999999"
            android:textColorHint="@color/color_999999"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_commit_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_radius_4dp_blue"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>



